trying image overflow issue solve

--- a/css/index.css
+++ b/css/index.css
@@ -282,18 +282,16 @@ nav {
 
 /* Top Image Slider Styles */
 .top-image {
-  /* width: 100%;
-  height: 600px; */
-  width: 100vw;
+  width: 100%;
+  /* width: 100vw; */
   height: 50vw;
   position: relative;
   overflow: hidden;
 }
 
 .slider-images {
-  /* width: 100%;
-  height: 100%; */
-  width: 100vw;
+  width: 100%;
+  /* width: 100vw; */
   height: 50vw;
   position: absolute;
   top: 0;
@@ -743,7 +741,7 @@ nav {
   .product-image {
     height: 180px;
   }
-  
+
 }
 
 @media (max-width: 480px) {
@@ -815,11 +813,11 @@ nav {
   font-family: var(--font-heading);
 }
 
-.features-title-p{
+.features-title-p {
   text-align: center;
   font-size: 18px;
   font-weight: 500;
-  margin: 20px 40px;  
+  margin: 20px 40px;
 }
 
 .feature-box {
@@ -997,7 +995,7 @@ nav {
     flex: 0 0 280px;
     padding: 25px;
   }
-  
+
   .testimonials-section h2 {
     font-size: 24px;
   }
@@ -1008,7 +1006,7 @@ nav {
     flex: 0 0 260px;
     padding: 20px;
   }
-  
+
   .testimonials-section h2 {
     font-size: 22px;
   }
@@ -1032,6 +1030,7 @@ nav {
 .testimonials-container::-webkit-scrollbar-thumb:hover {
   background: var(--hover-color);
 }
+
 /* End of Testimonials Section */
 
 
@@ -1516,23 +1515,24 @@ footer {
   }
 }
 
- /* .top-image responsive  */
+/* .top-image responsive  */
 @media (width>800px) {
-    /* top image  */
-    .top-image {
-      /* width: 100vw; */
-      height: 97%;
-    }
-    
-    .slider-images {
-      /* width: 100vw; */
-      height: 97%;
-    }
-    
-    .slider-img {
-      /* width: 100vw; */
-      height: 97%;
-    }
+
+  /* top image  */
+  .top-image {
+    /* width: 100vw; */
+    height: 97%;
+  }
+
+  .slider-images {
+    /* width: 100vw; */
+    height: 97%;
+  }
+
+  .slider-img {
+    /* width: 100vw; */
+    height: 97%;
+  }
 }
 
 /* Add this at the end of your CSS file */
